<resources>
    <string name="app_name">Walking Tour</string>
    <string name="title_activity_maps">Map</string>
    <string name="location">Location</string>
    <string name="show_geofences_checkBox">Show Geofences</string>
    <string name="show_tour_path_checkBox">Show Tour Path</string>
    <string name="show_travel_path_checkBox">Show Travel Path</string>
    <string name="show_addresses_checkBox">Show Addresses</string>
    <string name="building_address">Building Address</string>
    <string name="building_name">Building Name</string>
    <string name="description">Description</string>
</resources>